import java.util.List;

public interface IDataAnalyzer {
    double averageTripDuration(List<Ride> rides);
}
